fixing smaller header and adjusting large-hero content on smaller screens.

--- a/app/assets/styles/modules/_large-hero.css
+++ b/app/assets/styles/modules/_large-hero.css
@@ -7,7 +7,7 @@
   }
 
   &__text-content {
-    position: absolute;
+    position: relative;
     padding-top: 0.8rem;
     top: 0;
     left: 0;
@@ -15,13 +15,18 @@
     overflow: hidden;
     text-align: center;
     background-color: rgba(255, 255, 255, 0.3);
-    margin-top: 41.6px;
+    margin-top: 0;
 
     @mixin atMedium {
+      position: absolute;
       font-size: 1rem;
       background-color: rgba(255, 255, 255, 0.6);
       padding-top: 1.9rem;
-      margin-top: 65px;
+      margin-top: 60px;
+    }
+
+    @mixin atLarge {
+      margin-top: 85px;
     }
   }
 
