--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -3,7 +3,11 @@
   position: fixed;
   z-index: 2;
   width: 100%;
-  background-color: rgba($mainColor, 0.5);
+  background-color: rgba($mainColor, 0.8);
+
+  @mixin atMedium {
+    padding: 1.9rem;
+  }
 
   &__logo {
     position: absolute;
@@ -28,18 +32,42 @@
     }
   }
 
-  &__icon--medium-plus {
+  &__icon--medium-to-large {
     display: none;
 
     @mixin atMedium {
+      display: inline-block;
+    }
+
+    @mixin atLarge {
+      display: none;
+    }
+  }
+
+  &__icon--larger {
+    display: none;
+
+    @mixin atLarge {
       display: inline-block;
     }
   }
 
   &__titles {
     float: right;
-    margin-left: 1rem;
-    margin-top: -15px;
+    /* margin-left: 1rem; */
+    /* margin-top: -15px; */
+    position: relative;
+    top: 1rem;
+    left: 3%;
+    transform: translateY(-55%);
+
+    @mixin atMedium {
+      margin-left: 1rem;
+      margin-top: -15px;
+      top: 0;
+      left: 0;
+      transform: translateY(0);
+    }
   }
 
   &__title {
@@ -56,5 +84,9 @@
     font-size: 0.7rem;
     margin-top: 0;
     text-align: right;
+
+    @mixin atMedium {
+      font-size: 1rem;
+    }
   }
 }
